@@ -1,10 +1,7 @@
 import main.helpers.Helpers;
 import main.resources.Encoder;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.*;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -15,7 +12,7 @@ import java.util.List;
 import java.util.Scanner;
 
 public class Main {
-    public static void main(String[] args) throws IOException {
+    public static void main(String[] args) throws IOException, InterruptedException {
         File file = new File(args[0]);
 
         Scanner sc = new Scanner(file);
@@ -35,23 +32,20 @@ public class Main {
 
         Files.write(outputFile, formattedOutput, Charset.forName("UTF-8"));
 
-        String[] command = { "/Users/raul/open-wbo/open-wbo", outputFilePath, solverOutputFilePath };
-
-        Process process = Runtime.getRuntime().exec(command);
+        ProcessBuilder pb = new ProcessBuilder("/Users/raul/open-wbo/open-wbo", outputFilePath, solverOutputFilePath);
+        pb.redirectErrorStream(true);
+        Process process = pb.start();
+        pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
 
         BufferedReader lineReader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-
-        String processLine = lineReader.readLine();
-        String solution = "";
-
-        while (processLine != null) {
+        String processLine, solution = "";
+        while ((processLine = lineReader.readLine()) != null) {
             System.out.println(processLine);
             if (processLine.charAt(0) == 'v') solution = processLine.substring(2);
-            processLine = lineReader.readLine();
         }
+        process.waitFor();
 
         System.out.println("---------------------------------------");
-        System.out.println("SOLUTION: ");
 
         String[] positiveEvaluations = solution.split(" ");
         Arrays.stream(positiveEvaluations).filter(s -> s.charAt(0) != '-').forEach(elem -> encoder.printVariablesMap(Integer.valueOf(elem)));
